<resources>
    <string name="app_name">LabsApp</string>
    <string name="image">image</string>
    <string name="title">Заголовок</string>
    <string name="subtitle">Подзаголовок</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="input_email">Введите Email</string>
    <string name="input_password">Введите пароль</string>
    <string name="err_input_data">Ошибка: некорректные данные</string>
    <string name="sign_in">Войти</string>
    <string name="reg_in">Еще нет аккаунта? Зарегистрироваться</string>
    <string name="in_develop">В разработке</string>
    <string name="profile">Профиль</string>
    <string name="name_sender">Имя отправителя</string>
    <string name="last_msg">Последнее сообщение</string>
    <string name="template_time">12:00</string>
    <string name="sign_up">Регистрация</string>
    <string name="input_login">Введите логин</string>
    <string name="in_email">Введите email</string>
    <string name="in_pass">Введите пароль</string>
    <string name="do_sign_up">Зарегистрироваться</string>
    <string name="chats">Чаты</string>
    <string name="log">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name">name</string>
    <string name="text_culture">culture</string>
    <string name="text_bord">bord</string>
    <string name="text_titles">titles</string>
    <string name="text_aliases">aliases</string>
    <string name="text_played">played</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="save">Сохранить</string>
    <string name="status_of_file">Статус файла</string>
    <string name="delete_file">Удалить файл</string>
    <string name="not_cp">Резервной копии нет</string>
    <string name="backup_file">Восстановить файл</string>
    <string name="update_data">Обновить данные</string>
    <string name="next_page">Next Page</string>
    <string name="previous_page">Previous Page</string>
</resources>