<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="50dp"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:focusedByDefault="true"
        android:checked="false" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusedByDefault="false"
        android:text="@string/enable_notifications"
        android:checked="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:textSize="15sp"
            android:text="@string/language"/>

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="wrap_content"
            android:layout_height="45dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPrevSettings"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/save" />


    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/tvFileStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_of_file"
        android:textSize="16sp" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/btnDeleteFile"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/delete_file"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvBackupStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_cp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRestoreFile"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/backup_file"
        android:visibility="gone"
        android:layout_marginTop="8dp"/>

</LinearLayout>