<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:hint="@string/input_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:hint="@string/in_email" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:hint="@string/in_pass" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/do_sign_up" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"/>

</LinearLayout>