<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/onboardFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OnboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/onboardImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/onboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/onboardSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/back" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/next" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/settings"
            android:backgroundTint="@color/black"
            android:layout_marginTop="50dp" />

    </LinearLayout>

</FrameLayout>